--- a/ischool_IEP/ischool_IEP/ischool_IEP.csproj
+++ b/ischool_IEP/ischool_IEP/ischool_IEP.csproj
@@ -101,16 +101,29 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAO\UDTTransfer.cs" />
+    <Compile Include="DAO\udt_input_data.cs" />
     <Compile Include="DAO\udt_input_item.cs" />
     <Compile Include="DAO\udt_open_datetime.cs" />
     <Compile Include="DAO\udt_student.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\AddIEPStudentForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\AddIEPStudentForm.Designer.cs">
+      <DependentUpon>AddIEPStudentForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\IEPStudentListForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UI\IEPStudentListForm.Designer.cs">
       <DependentUpon>IEPStudentListForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\RemoveIEPStudentForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\RemoveIEPStudentForm.Designer.cs">
+      <DependentUpon>RemoveIEPStudentForm.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\SetInputItemsForm.cs">
       <SubType>Form</SubType>
@@ -127,8 +140,14 @@
     <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="UI\AddIEPStudentForm.resx">
+      <DependentUpon>AddIEPStudentForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\IEPStudentListForm.resx">
       <DependentUpon>IEPStudentListForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\RemoveIEPStudentForm.resx">
+      <DependentUpon>RemoveIEPStudentForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\SetInputItemsForm.resx">
       <DependentUpon>SetInputItemsForm.cs</DependentUpon>
